--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,11 @@
+registry=https://registry.npmmirror.com
 auto-install-peers=true
 engine-strict=true
+strict-peer-dependencies=true
+public-hoist-pattern[]=*types*
+public-hoist-pattern[]=*eslint*
+public-hoist-pattern[]=@prettier/plugin-*
+public-hoist-pattern[]=*prettier-plugin-*
+public-hoist-pattern[]=*stylelint*
+public-hoist-pattern[]=postcss-html
+public-hoist-pattern[]=@vue/runtime-core
