--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,53 +1,19 @@
 {
-  "name": "vite-plugin-vue-element-plus-icon",
-  "version": "1.0.0",
-  "description": "a vite plugin to load svg icon for element-plus",
-  "author": {
-    "name": "tjyuanpeng",
-    "email": "tjyuanpeng@gmail.com"
-  },
-  "license": "MIT",
+  "name": "@vue-portal/playground",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "build": "tsup-node src/index.ts --dts --format esm,cjs --no-splitting --clean",
-    "dev": "npm run build -- --watch"
-  },
-  "engines": {
-    "node": ">=14"
-  },
-  "peerDependencies": {
-    "vue": "^3.2.13"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "tsup": "^6.2.3",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue-jsx": "^2.1.1",
     "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vue": "^3.2.37"
+    "vite": "^3.0.9"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tjyuanpeng/vite-plugin-vue-element-plus-icon.git"
-  },
-  "homepage": "https://github.com/tjyuanpeng/vite-plugin-vue-element-plus-icon",
-  "bugs": {
-    "url": "https://github.com/tjyuanpeng/vite-plugin-vue-element-plus-icon/issues"
-  },
-  "keywords": [
-    "vue"
-  ]
+  "dependencies": {
+    "element-plus": "^2.2.20",
+    "vue": "^3.2.44",
+    "vue-portal": "workspace:*"
+  }
 }
