--- a/packages/vue-portal/tsconfig.json
+++ b/packages/vue-portal/tsconfig.json
@@ -19,7 +19,10 @@
     ],
   },
   "include": [
-    "packages/*/src/**/*.ts",
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
   ],
   "exclude": [
     "node_modules"
