--- a/package.json
+++ b/package.json
@@ -1,53 +1,36 @@
 {
-  "name": "vite-plugin-vue-element-plus-icon",
-  "version": "1.0.0",
-  "description": "a vite plugin to load svg icon for element-plus",
-  "author": {
-    "name": "tjyuanpeng",
-    "email": "tjyuanpeng@gmail.com"
-  },
-  "license": "MIT",
+  "name": "@vue-portal/root",
+  "private": true,
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist"
+  "packageManager": "pnpm@7.9.0",
+  "workspaces": [
+    "packages/*"
   ],
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "build": "tsup-node src/index.ts --dts --format esm,cjs --no-splitting --clean",
-    "dev": "npm run build -- --watch"
-  },
-  "engines": {
-    "node": ">=14"
-  },
-  "peerDependencies": {
-    "vue": "^3.2.13"
+    "prepare": "husky install",
+    "build": "pnpm --filter vue-portal run build",
+    "dev": "pnpm -r run dev"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.7.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "tsup": "^6.2.3",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vue": "^3.2.37"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tjyuanpeng/vite-plugin-vue-element-plus-icon.git"
-  },
-  "homepage": "https://github.com/tjyuanpeng/vite-plugin-vue-element-plus-icon",
-  "bugs": {
-    "url": "https://github.com/tjyuanpeng/vite-plugin-vue-element-plus-icon/issues"
-  },
-  "keywords": [
-    "vue"
-  ]
+  }
 }
