--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "node": ">=16"
   },
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
-    "build": "pnpm --filter vue-portal run build",
-    "dev": "pnpm -r --parallel run dev"
+    "preinstall": "npx only-allow pnpm",
+    "dev": "pnpm -r --parallel run dev",
+    "build": "pnpm --filter vue-portal run build"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
