--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -52,6 +52,6 @@ jobs:
         run: pnpm run build
 
       - name: Publish
-        run: pnpm --filter promise-portal publish
+        run: pnpm run publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
