--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm",
     "dev": "pnpm -r --parallel run dev",
-    "build": "pnpm --filter vueportal run build",
+    "build": "pnpm --filter promise-portal run build",
     "publish": "pnpm --filter promise-portal publish"
   },
   "devDependencies": {
