--- a/packages/promise-portal/package.json
+++ b/packages/promise-portal/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promise-portal",
-  "version": "1.1.0",
-  "description": "use component like a promisd-like function",
+  "version": "1.2.0",
+  "description": "use component as a promisd-like function",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
