--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
-auto-install-peers=true
+git-checks=false
 engine-strict=true
+auto-install-peers=true
 strict-peer-dependencies=true
 public-hoist-pattern[]=*types*
 public-hoist-pattern[]=*eslint*
