--- a/packages/promise-portal/package.json
+++ b/packages/promise-portal/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.1",
   "description": "use component as a promisd-like function",
   "type": "module",
+  "sideEffects": false,
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
