--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,34 @@
 packages:
-  - 'packages/*'
+  - packages/*
+
+catalog:
+  '@antfu/eslint-config': ^6.4.1
+  '@types/node': ^24.10.1
+  '@vitejs/plugin-vue': ^6.0.4
+  '@vitejs/plugin-vue-jsx': ^5.1.4
+  '@vue/tsconfig': 0.8.1
+  ant-design-vue: ^4.2.6
+  dayjs: ^1.11.19
+  element-plus: ^2.13.2
+  eslint: ^9.39.1
+  eslint-plugin-format: ^1.1.0
+  tsdown: 0.20.1
+  typescript: ~5.9.3
+  unplugin-auto-import: ^21.0.0
+  unplugin-vue-components: ^31.0.0
+  vite: ^7.2.6
+  vite-plugin-pages: ^0.33.3
+  vue: ^3.5.25
+  vue-router: ^4.6.3
+  vue-tsc: ^3.2.4
+
+catalogMode: strict
+
+cleanupUnusedCatalogs: true
+
+shellEmulator: true
+
+trustPolicy: no-downgrade
+
+trustPolicyExclude:
+  - semver@6.3.1
