--- a/.npmrc
+++ b/.npmrc
@@ -1,11 +1,1 @@
-git-checks=false
-engine-strict=true
-auto-install-peers=true
-strict-peer-dependencies=true
-public-hoist-pattern[]=*types*
-public-hoist-pattern[]=*eslint*
-public-hoist-pattern[]=@prettier/plugin-*
-public-hoist-pattern[]=*prettier-plugin-*
-public-hoist-pattern[]=*stylelint*
-public-hoist-pattern[]=postcss-html
-public-hoist-pattern[]=@vue/runtime-core
+registry=https://registry.npmmirror.com/
