--- a/package.json
+++ b/package.json
@@ -1,36 +1,23 @@
 {
-  "name": "@promise-portal/root",
-  "private": true,
   "type": "module",
-  "workspaces": [
-    "packages/*"
-  ],
+  "private": true,
+  "packageManager": "pnpm@10.23.0",
   "engines": {
-    "node": ">=18"
+    "node": ">=24",
+    "pnpm": ">=10"
   },
   "scripts": {
-    "prepare": "husky install",
     "preinstall": "npx only-allow pnpm",
     "dev": "pnpm -r --parallel run dev",
     "build": "pnpm --filter promise-portal run build",
-    "publish": "pnpm --filter promise-portal publish"
+    "publish": "pnpm --filter promise-portal publish",
+    "clean": "rm -rf ./**/node_modules; rm -rf ./**/dist; "
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.7.0",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vue": "^3.2.37"
+    "@antfu/eslint-config": "catalog:",
+    "@types/node": "catalog:",
+    "@vue/tsconfig": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-format": "catalog:"
   }
 }
