--- a/packages/promise-portal/package.json
+++ b/packages/promise-portal/package.json
@@ -1,38 +1,13 @@
 {
   "name": "promise-portal",
-  "version": "1.2.1",
-  "description": "use component as a promisd-like function",
   "type": "module",
-  "sideEffects": false,
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "tsup-node src/index.ts --dts --format esm,cjs --no-splitting --clean",
-    "dev": "npm run build -- --watch"
-  },
-  "peerDependencies": {
-    "vue": "^3.2.13"
-  },
-  "devDependencies": {
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.2",
-    "vue": "^3.3.8"
-  },
+  "version": "2.0.0",
+  "description": "use component as a promisd-like function",
   "author": {
     "name": "tjyuanpeng",
     "email": "tjyuanpeng@gmail.com"
   },
+  "license": "MIT",
   "homepage": "https://github.com/tjyuanpeng/promise-portal",
   "repository": {
     "type": "git",
@@ -41,10 +16,36 @@
   "bugs": {
     "url": "https://github.com/tjyuanpeng/promise-portal/issues"
   },
-  "license": "MIT",
   "keywords": [
     "vue",
     "promise",
     "portal"
-  ]
+  ],
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.cts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "tsdown --watch",
+    "build": "tsdown",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint ."
+  },
+  "peerDependencies": {
+    "vue": "3"
+  },
+  "devDependencies": {
+    "tsdown": "catalog:",
+    "typescript": "catalog:"
+  }
 }
