--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "pnpm -r --parallel run dev",
     "build": "pnpm --filter promise-portal run build",
     "publish": "pnpm --filter promise-portal publish",
-    "clean": "rm -rf ./**/node_modules; rm -rf ./**/dist; "
+    "clean": "rm -rf ./**/node_modules; rm -rf ./**/dist"
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
